--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,7 +34,7 @@ tasks.withType(GenerateModuleMetadata) {
 }
 
 dependencies {
-    api('io.github.jbock-java:either:1.5')
+    implementation 'javax.inject:javax.inject:1'
     testImplementation('org.mockito:mockito-core:3.12.4')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
 }
