--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation('com.squareup:javapoet:1.13.0')
     implementation('com.google.auto:auto-common:1.0')
     implementation('com.google.guava:guava:30.1.1-jre')
+    implementation('com.google.googlejavaformat:google-java-format:1.11.0')
     shadow(core)
     implementation('com.google.auto.value:auto-value-annotations:1.8.2')
     annotationProcessor('com.google.auto.value:auto-value:1.8.2')
