--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -43,11 +43,10 @@ shadowJar {
     relocate('com.squareup.javapoet', 'dapper.javapoet')
     relocate('com.google', 'dapper.google')
     relocate('org.checkerframework', 'dapper.org.checkerframework')
-    relocate('javax.inject', 'dapper.javax.inject')
 }
 
 dependencies {
-    def core = project(':core')
+    def core = 'io.github.jbock-java:dapper:1.0'
     implementation('com.squareup:javapoet:1.13.0')
     implementation('com.google.auto:auto-common:1.0')
     implementation('com.google.guava:guava:30.1.1-jre')
