--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -47,19 +47,21 @@ shadowJar {
 }
 
 dependencies {
-    def core = 'io.github.jbock-java:dapper:1.0'
+    def core = 'com.google.dagger:dagger:2.36'
     implementation('com.squareup:javapoet:1.13.0')
     implementation('com.google.auto:auto-common:1.0')
     implementation('com.google.guava:guava:30.1.1-jre')
     implementation('com.google.googlejavaformat:google-java-format:1.11.0')
     shadow(core)
     shadow('javax.inject:javax.inject:1')
+    implementation('jakarta.inject:jakarta.inject-api:2.0.1.RC1')
     implementation('com.google.auto.value:auto-value-annotations:1.8.2')
     annotationProcessor('com.google.auto.value:auto-value:1.8.2')
     implementation('org.checkerframework:checker-qual:3.18.1')
     implementation('org.checkerframework:checker-compat-qual:2.5.5')
     annotationProcessor('org.checkerframework:checker:3.18.1')
-    annotationProcessor('io.github.jbock-java:dapper-compiler:0.9')
+    implementation('com.google.dagger:dagger:2.36')
+    annotationProcessor('com.google.dagger:dagger-compiler:2.36')
     implementation('javax.annotation:jsr250-api:1.0')
     testImplementation(core)
     testImplementation('com.google.testing.compile:compile-testing:0.19')
