--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation('com.google.auto:auto-common:1.0')
     implementation('com.google.googlejavaformat:google-java-format:1.11.0')
     shadow(core)
-    implementation('com.google.auto.value:auto-value-annotations:1.8.2')
+    shadow('com.google.auto.value:auto-value-annotations:1.8.2')
     annotationProcessor('com.google.auto.value:auto-value:1.8.2')
     implementation('org.checkerframework:checker-compat-qual:2.5.5')
     annotationProcessor('org.checkerframework:checker:3.18.1')
