--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,7 +34,7 @@ tasks.withType(GenerateModuleMetadata) {
 }
 
 dependencies {
-    api('jakarta.inject:jakarta.inject-api:2.0.1.RC1')
+    api('jakarta.inject:jakarta.inject-api:2.0.1')
     testImplementation('org.mockito:mockito-core:3.12.4')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
 }
