--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -122,8 +122,8 @@ publishing {
 
                 licenses {
                     license {
-                        name = 'MIT License'
-                        url = 'https://opensource.org/licenses/MIT'
+                        name = 'Apache 2.0'
+                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
                 developers {
