--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -28,6 +28,7 @@ javadoc {
 
 repositories {
     mavenCentral()
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/iogithubjbock-java-1089' }
 }
 
 tasks.named('compileTestJava').configure { it ->
@@ -65,7 +66,7 @@ dependencies {
     annotationProcessor('com.google.auto.value:auto-value:1.8.2')
     implementation('org.checkerframework:checker-compat-qual:2.5.5')
     annotationProcessor('org.checkerframework:checker:3.18.1')
-    annotationProcessor('io.github.jbock-java:dapper-compiler:1.1')
+    annotationProcessor('io.github.jbock-java:dapper-compiler:1.2')
     testImplementation(core)
     testImplementation('com.google.testing.compile:compile-testing:0.19')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
