--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id('java')
-    id('net.ltgt.errorprone') version('2.0.2')
     id('com.github.johnrengelman.shadow') version('6.1.0')
     id('maven-publish')
     id('signing')
@@ -30,14 +29,6 @@ repositories {
     mavenCentral()
 }
 
-tasks.named('compileTestJava').configure { it ->
-    it.options.errorprone.enabled = false
-}
-
-tasks.named('compileJava').configure { it ->
-    it.options.errorprone.excludedPaths = '.*[/\\\\]generated[/\\\\].*'
-}
-
 tasks.withType(AbstractArchiveTask) {
     preserveFileTimestamps = false
     reproducibleFileOrder = true
@@ -56,20 +47,19 @@ shadowJar {
 
 dependencies {
     def core = 'io.github.jbock-java:dapper:1.2'
-    implementation('com.squareup:javapoet:1.13.0')
+    implementation('io.github.jbock-java:javapoet:1.14')
     implementation('org.checkerframework:checker-compat-qual:2.5.5')
-    shadow('com.google.auto:auto-common:1.2')
+    shadow('io.github.jbock-java:auto-common:1.2.0')
     shadow('com.google.googlejavaformat:google-java-format:1.11.0')
     shadow(core)
-    shadow('com.google.auto.value:auto-value-annotations:1.8.2')
-    annotationProcessor('com.google.auto.value:auto-value:1.8.2')
+    shadow('io.github.jbock-java:auto-value-annotations:1.8.2.0')
+    annotationProcessor('io.github.jbock-java:auto-value:1.8.2.0')
     annotationProcessor('org.checkerframework:checker:3.18.1')
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2')
     testImplementation(core)
     testImplementation('com.google.testing.compile:compile-testing:0.19')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
     testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
-    errorprone('com.google.errorprone:error_prone_core:2.9.0')
 }
 
 jar {
