--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
     testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
     testImplementation('org.hamcrest:hamcrest-core:2.2')
+    testImplementation('org.assertj:assertj-core:3.21.0')
 }
 
 jar {
