--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -27,6 +27,7 @@ javadoc {
 
 repositories {
     mavenCentral()
+    maven() { url 'https://s01.oss.sonatype.org/content/repositories/iogithubjbock-java-1108' }
 }
 
 tasks.withType(AbstractArchiveTask) {
@@ -55,8 +56,8 @@ dependencies {
 //    annotationProcessor('org.checkerframework:checker:3.18.1')
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2')
     testImplementation(core)
-    testImplementation('com.google.testing.compile:compile-testing:0.19')
-//    testImplementation('io.github.jbock-java:compile-testing:0.19.0')
+    testImplementation('io.github.jbock-java:auto-value:1.8.2.0')
+    testImplementation('io.github.jbock-java:compile-testing:0.19.2')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
     testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
     testImplementation('org.hamcrest:hamcrest-core:2.2')
