--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -52,7 +52,6 @@ dependencies {
     shadow(core)
     shadow('io.github.jbock-java:auto-value-annotations:1.8.2.0')
     annotationProcessor('io.github.jbock-java:auto-value:1.8.2.0')
-//    annotationProcessor('org.checkerframework:checker:3.18.1')
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2')
     testImplementation(core)
     testImplementation('io.github.jbock-java:auto-value:1.8.2.0')
@@ -61,6 +60,8 @@ dependencies {
     testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
     testImplementation('org.hamcrest:hamcrest-core:2.2')
     testImplementation('org.assertj:assertj-core:3.21.0')
+    // why is this necessary?
+    testImplementation('com.google.errorprone:error_prone_annotations:2.4.0')
 }
 
 jar {
