--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -51,11 +51,10 @@ dependencies {
     shadow('io.github.jbock-java:auto-common:1.2.1')
     implementation('io.github.jbock-java:guava:31.0.1.0')
     shadow(core)
-    shadow('io.github.jbock-java:auto-value-annotations:1.8.2.0')
-    annotationProcessor('io.github.jbock-java:auto-value:1.8.2.0')
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2')
     testImplementation(core)
     testImplementation('io.github.jbock-java:auto-common:1.2.1')
+    testImplementation('io.github.jbock-java:auto-value-annotations:1.8.2.0')
     testImplementation('io.github.jbock-java:auto-value:1.8.2.0')
     testImplementation('io.github.jbock-java:compile-testing:0.19.10')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
