--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -51,8 +51,8 @@ dependencies {
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2')
     testImplementation(core)
     testImplementation('io.github.jbock-java:auto-common:1.2.1')
-    testImplementation('io.github.jbock-java:auto-value-annotations:1.8.2.0')
-    testImplementation('io.github.jbock-java:auto-value:1.8.2.0')
+//    testImplementation('io.github.jbock-java:auto-value-annotations:1.8.2.0')
+//    testImplementation('io.github.jbock-java:auto-value:1.8.2.0')
     testImplementation('io.github.jbock-java:compile-testing:0.19.10')
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
     testImplementation('org.junit.vintage:junit-vintage-engine:5.8.1')
