pick f200eb9 Migrate ModuleValidator to XProcessing
see: https://github.com/google/dagger/commit/f200eb9f4c0c613ba99e335570fd40e4c6173c29
date: Oct 11, 2021

--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     shadow(graph)
     shadow(dapper)
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2.1')
-    implementation('androidx.room:room-compiler-processing:2.4.1')
+    testImplementation('androidx.room:room-compiler-processing:2.4.1')
     testImplementation(dapper)
     testImplementation(ac)
     testImplementation('io.github.jbock-java:compile-testing:0.19.12')
