--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id('java')
-    id('com.github.johnrengelman.shadow') version('7.1.2')
     id('maven-publish')
     id('signing')
 }
@@ -33,21 +32,18 @@ tasks.withType(GenerateModuleMetadata) {
     enabled = true
 }
 
-shadowJar {
-    minimize()
-    archiveClassifier.set('')
-}
-
 dependencies {
     def dapper = project(':dapper')
     def javapoet = 'io.github.jbock-java:javapoet:1.15'
-    def ac =  'io.github.jbock-java:auto-common:1.2.3'
+    def ac = 'io.github.jbock-java:auto-common:1.2.3'
     def graph = 'io.github.jbock-java:guava-graph:1.0.2'
-    shadow(javapoet)
-    shadow(ac)
-    shadow(graph)
-    shadow(dapper)
+    implementation(javapoet)
+    implementation(ac)
+    implementation(graph)
+    implementation(dapper)
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2.1')
+    implementation('io.github.jbock-java:auto-value-annotations:1.8.2.1')
+    annotationProcessor('io.github.jbock-java:auto-value:1.8.2.1')
     testImplementation('androidx.room:room-compiler-processing:2.4.1')
     testImplementation(dapper)
     testImplementation(ac)
@@ -90,8 +86,7 @@ artifacts {
 // https://central.sonatype.org/pages/gradle.html
 publishing {
     publications {
-        mavenJava(MavenPublication) { publication ->
-            project.shadow.component(publication)
+        mavenJava(MavenPublication) {
             artifactId = 'dapper-compiler'
 
             artifact sourcesJar
