--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -21,6 +21,7 @@ javadoc {
 repositories {
     mavenCentral()
     google()
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/iogithubjbock-java-1152' }
 }
 
 tasks.withType(AbstractArchiveTask) {
@@ -43,7 +44,7 @@ dependencies {
     implementation(dapper)
     annotationProcessor('io.github.jbock-java:dapper-compiler:1.2.1')
     implementation('io.github.jbock-java:auto-value-annotations:1.8.2.1')
-    annotationProcessor('io.github.jbock-java:auto-value:1.8.2.1')
+    annotationProcessor('io.github.jbock-java:auto-value:1.8.2.3')
     testImplementation('androidx.room:room-compiler-processing:2.4.1')
     testImplementation(dapper)
     testImplementation(ac)
