--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -28,6 +28,7 @@ javadoc {
 repositories {
     mavenCentral()
     google()
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/iogithubjbock-java-1155' }
 }
 
 shadowJar {
@@ -61,8 +62,8 @@ dependencies {
     implementation(ac)
     implementation(graph)
     shadow(dapper)
-    annotationProcessor('io.github.jbock-java:dapper-compiler:1.2.1')
-    implementation('io.github.jbock-java:auto-value-annotations:1.8.2.2')
+    annotationProcessor('io.github.jbock-java:dapper-compiler:2.41.1')
+    compileOnly('io.github.jbock-java:auto-value-annotations:1.8.2.2')
     annotationProcessor('io.github.jbock-java:auto-value:1.8.2.2')
     testImplementation('androidx.room:room-compiler-processing:2.4.1')
     testImplementation(dapper)
