--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -28,6 +28,7 @@ javadoc {
 repositories {
     mavenCentral()
     google()
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/iogithubjbock-java-1157' }
 }
 
 shadowJar {
@@ -53,7 +54,7 @@ shadowJar {
 }
 
 dependencies {
-    def dapper = project(':dapper')
+    def dapper = 'io.github.jbock-java:dapper:2.41.2'
     def javapoet = 'io.github.jbock-java:javapoet:1.15'
     def ac = 'io.github.jbock-java:auto-common:1.2.3'
     def graph = 'io.github.jbock-java:guava-graph:1.0.2'
@@ -61,7 +62,7 @@ dependencies {
     implementation(ac)
     implementation(graph)
     shadow(dapper)
-    annotationProcessor('io.github.jbock-java:dapper-compiler:2.41.1')
+    annotationProcessor('io.github.jbock-java:dapper-compiler:2.41.2')
     compileOnly('io.github.jbock-java:auto-value-annotations:1.8.2.2')
     annotationProcessor('io.github.jbock-java:auto-value:1.8.2.2')
     implementation('androidx.room:room-compiler-processing:2.5.0-alpha01')
